--- a/examples/Morsley.UK.People.API.Example.MVC/Views/Person/Create.cshtml
+++ b/examples/Morsley.UK.People.API.Example.MVC/Views/Person/Create.cshtml
@@ -2,7 +2,7 @@
 
 <div class="text-center">
 
-    <h1 class="border-bottom pb-3 mb-4">Create Person</h1>
+    <h1 class="display-4 border-bottom pb-3 mb-4">Create Person</h1>
 
     <form asp-controller="Person" asp-action="Create" method="post" class="needs-validation" novalidate>
         
@@ -124,7 +124,7 @@
         </div>
 
         <a asp-controller="Home" asp-action="Index" class="btn btn-sm btn-secondary btn-width">Cancel</a>
-        <input type="submit" class="btn btn-sm btn-success btn-width" value="Create" />
+        <input type="submit" class="btn btn-sm btn-info btn-width" value="Create" />
 
     </form>
 
